# storage/api-docs/api-docs.json
@@ -379,9 +379,64 @@
                     {
                         "name": "limit",
                         "in": "query",
+                        "description": "Limit the return result",
                         "required": false,
                         "schema": {
-                            "type": "string"
+                            "type": "integer",
+                            "format": "int64",
+                            "example": "50"
+                        }
+                    },
+                    {
+                        "name": "min_price",
+                        "in": "query",
+                        "description": "Min task's price",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": "100"
+                        }
+                    },
+                    {
+                        "name": "max_price",
+                        "in": "query",
+                        "description": "Max task's price",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": "500"
+                        }
+                    },
+                    {
+                        "name": "task_states",
+                        "in": "query",
+                        "description": "Task's current state",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "posted"
+                        }
+                    },
+                    {
+                        "name": "query",
+                        "in": "query",
+                        "description": "Task's search term",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "task"
+                        }
+                    },
+                    {
+                        "name": "sort_by",
+                        "in": "query",
+                        "description": "Task's order",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "recent"
                         }
                     }
                 ],
